Added author component styles

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <link rel="manifest" href="site.webmanifest">
         <link rel="mask-icon" href="safari-pinned-tab.svg" color="#e85e00">
 
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/screen.css">
     </head>
@@ -32,6 +33,18 @@
                 <img srcset="img/picture-square@2x.jpg" alt="Picture of girl reading on a tablet">
             </picture>
         </figure>
+        <div class="c-author">
+            <img class="c-author__image" src="img/avatar.jpg" alt="Ravil Zhumaev">
+            <div class="c-author__caption">
+                <h2 class="c-author__name">Ravil Zhumaev</h2>
+                <p class="c-author__meta">
+                    User Interface Designer
+                    <span>
+                        <span></span>
+                    </span>
+                </p>
+            </div>
+        </div>
         <p>
             As we refine our methods of responsive web design,* we’ve increasingly focus*ed on measure (another word for “line length”) and its relationship to how people read. The popularization of the “ideal measure” has led to advice such as “Increase font size for large screens and reduce font size for small screens.” While a good measure does improve the reading experience, it’s only one rule for good typography. Another rule is to maintain a comfortable font size.
         </p>
